prevent scalebar pt and edit labels X wrap to next fine

--- a/src/css/figure.css
+++ b/src/css/figure.css
@@ -351,6 +351,7 @@
     .scalebar_form .row {
         align-items: center;
         display: flex;
+        flex-wrap: nowrap;
         gap: 3px;
         margin-top: 3px;
     }
@@ -383,6 +384,10 @@
 
     .edit-label-form {
         position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: center;
+        gap: 4px;
     }
 
     .edit-label-form .input-group {
@@ -1416,6 +1421,7 @@
     .colorbar_form .input-group {
         width:80px;
         margin-right: 4px;
+
     }
 
     .colorbar_form .form-group {
@@ -1425,6 +1431,7 @@
     .colorbar_form .row {
         align-items: center;
         display: flex;
+        flex-wrap: nowrap;
         gap: 3px;
         margin-top: 3px;
     }
